# Avi-core

./: 404.html  CODE_OF_CONDUCT.md  Cargo.toml  DOCUMENTATION TO ADD  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml
.github/workflows/: gh-pages.yml  release.yml  rust.yml  test.yml
book/: ask.md  config.md  context.md  fn-method.md  for.md  index.md  mkdocs.yml  num-op.md  on_start_on_end.md  operators.md  sidebar.md  speak.md  translation.md
book/control-flow/: for.md  if.md  index.md  loop.md  return.md  switch.md  throw.md  try-catch.md
book/events/: index.md  on_intent.md
book/functions/: fn-closure.md  fn-metadata.md  fn-method.md  functions.md  index.md  num-fn.md  overload.md
book/meta/: comments.md  index.md  keywords.md  type-of.md
book/modules/: export.md  import.md  index.md
book/operators/: assignment-op.md  convert.md  index.md  num-op.md  operators.md
book/statements/: eval.md  index.md  statements.md
book/types/: arrays.md  bit-fields.md  blobs.md  fn-ptr.md  index.md  numbers.md  object-maps.md  string-fn.md  strings-chars.md  timestamps.md  values-and-types.md
book/variables/: assignment.md  constants.md  index.md  indexing.md  ranges.md  variables.md
control-flow/: index.html
events/: index.html
functions/: index.html
intents/: find_hotel.json
meta/: index.html
modules/: index.html
my_skill/: metadata.avi  skill.avi
operators/: index.html
search/: search_index.json
sidebar/: index.html
src/: main.rs  version.rs
src/broker/: mod.rs  (+1 more)
statements/: index.html
types/: index.html
variables/: index.html
(+106 files in other folders)
