[package]
name = "Avi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "*"
terminal_size = "*"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
rhai = { version = "*", features = ["debugging", "decimal", "serde" ] }
uuid = { version = "*", features = ["v4"] }
rhai-fs = "*"
rhai-url = "*"
dirs = "6.0.0"